# ot-harjoitustyo

./: .coverage  .coveragerc  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  changelog.md  definition.md  guide.md  hours-spent.md  testing.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/poetry-testi/src/: .index.py.swp
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hs_sekvenssi_chatGPT.md  hsl_sekvenssi.md  monopoli.md  sekvenssi.md  test.md
src/: main.py  test.py
src/assets/font/: credits.txt
src/assets/game_items/: credits.txt
src/assets/menu_items/main_menu/: credits.txt
src/assets/menu_items/main_menu/Talon_buttons/: credits.txt
src/assets/sound/music/: credits.txt
src/assets/sound/sfx/: credits.txt
src/gameobjects/: board.py  objects.py
src/gameobjects/game/: board.py  score.py  tile.py
src/gameobjects/menu/: button.py  text.py
src/gui/: display.py  image.py
src/logic/: gameboard.py
src/settings/: volume.py  volumeDB
src/tests/: gameboard_test.py
