[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.0.0"
coverage = "^7.2.2"
pygame = "^2.3.0"
numpy = "^1.24.2"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
